Redirect PortFolioLine Component

--- a/src/app/components/list-portafolio-lines/list-portafolio-lines.component.html
+++ b/src/app/components/list-portafolio-lines/list-portafolio-lines.component.html
@@ -11,7 +11,7 @@
     <th scope="row">{{portfolioline.id}}</th>
     <td>{{portfolioline.amount}}</td>
     <td>
-      <button type="button" routerLink="/portfolio/{{portfolioline.id}}" class="btn btn-primary">Edit</button>
+      <button type="button" routerLink="/portfolioLine/{{portfolioline.id}}" class="btn btn-primary">Edit</button>
       <button type="button" class="btn btn-danger" (click)="deletePortfolioLine(portfolioline.id)">Delete</button>
     </td>
   </tr>
