--- a/src/app/components/shared/nav-bar/nav-bar.component.html
+++ b/src/app/components/shared/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" routerLink="listCurrency">Currency</a>
       </li>
       <li class="nav-item" routerLinkActive="active">
-        <a class="nav-link" routerLink="listPortfolio">Portafolio</a>
+        <a class="nav-link" routerLink="listPortfolio">Portfolio</a>
       </li>
     </ul>
 
