--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,25 @@
-<p>
-  home works!
-</p>
+<h1 class="text-center text-black-50">CryptoCurrency</h1>
+<div class="alert alert-success" role="alert">
+  Crear(POST), Actualizar(POST) y Leer(GET, GETALL) Currency realizado
+</div>
+<div class="alert alert-success" role="alert">
+  **OPTIONAL** Valida el Acronimo de la Moneda
+</div>
+<div class="alert alert-danger" role="alert">
+  PUT y DELETE CORS error | Currency
+</div>
+<div class="alert alert-success" role="alert">
+  Crear(POST), Actualizar(POST) y Leer(GET, GETALL) Portfolio realizado
+</div>
+<div class="alert alert-danger" role="alert">
+  PUT y DELETE CORS error | Portfolio
+</div>
+<div class="alert alert-success" role="alert">
+  Crear(POST), Actualizar(POST) y Leer(GET, GETALL) Portfolio Line realizado
+</div>
+<div class="alert alert-success" role="alert">
+  **OPTIONAL** Realiza la conversion (Falta mostrarla en pantalla)
+</div>
+<div class="alert alert-danger" role="alert">
+  PUT Y DELETE CORS error | PortfolioLine
+</div>
