--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-nav-bar [title]="title"></app-nav-bar>
-<div class="container-fluid">
+<div class="container">
   <router-outlet></router-outlet>
 </div>
